changes the way admin gui is invoked so classpath can include log4j.xml